# calculator

./: .gitignore  Makefile  README.md  calc.py  calculator.go  calculator_test.go  go.mod  go.sum  pytest.ini  requirements-dev.txt  setup.cfg  setup.py  tasks.py
.github/workflows/: ci.yml
calc/: app.py  engine.py  interface.py  lex.py  lolo.py  parser.py
docs/: grammar.md
tests/: calc_step_definition.go  calc_test.go  conftest.py
tests/bdd/features/: calculator.feature  char.feature  input-tape.feature
tests/bdd/features/lolo/: set.feature  setmn.feature
tests/bdd/step_defs/: conftest.py  test_calculator_steps.py  test_calculator_steps.py.py  test_input_tape_steps.py  test_lolo_steps.py
tests/features/: addition.feature  calculation.feature
tests/unit/: test_app.py  test_engine.py  test_lex.py  test_lolo.py
