[metadata]
name = calc
version = attr: calc.__version__
author = Hudson Collier
author_email = hudson.collier@gmail.com
description = A calculator package
keywords = calculator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    executable-name = calc.app:main

[pycodestyle]
count = False
ignore = E201,E202,E226,E251,E261,E302,E303,E501,E711,E712,E713,W292,W391
max-line-length = 79
statistics = True
exclude = .git,venv
